# RPi4-App

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/test-app/: CMakeLists.txt  main.cpp
scripts/: gdbserver.sh  mount-sshfs.sh  script-env.sh
